--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,10 +1,12 @@
+/* CSS do Template*/
+
 .logo {
   width: 280px;
   margin-top: 10px;
   margin-left: 30px;
 }
 .header {
-  background: rgb(222, 223, 233);
+  background: rgb(29, 31, 56);
   margin-bottom: 20px;
 }
 .header_area {
@@ -33,8 +35,38 @@
 .card {
   margin-top: 30px;
 }
-.mb.card-body {
+
+/* Geral */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: Helvetica, sans-serif;
+  color: #323232;
+  border: none;
+}
+
+input,
+label {
+  display: block;
+  outline: none;
+  width: 100%;
+}
+
+/* form */
+#main-container {
+  width: 500px;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: #fff;
+  border-radius: 10px;
+  padding: 25px;
+}
+
+#main-container h1 {
   text-align: center;
+  margin-bottom: 25px;
+  font-size: 1.6rem;
 }
 .dropdown-toggle {
   background-color: rgb(2, 6, 56);
@@ -56,10 +88,11 @@
   height: 550px;
 }
 
-#login-box, #register-box {
+#login-box,
+#register-box {
   padding: 5%;
-  border: 1px solid #9C9C9C;
-  background-color: #EAEAEA;
+  border: 1px solid #9c9c9c;
+  background-color: #eaeaea;
 }
 
 /* SVG Fav Icon */
