--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -94,7 +94,6 @@ label {
   border: 1px solid #9c9c9c;
   background-color: #eaeaea;
 }
-
 /* SVG Fav Icon */
 .fav-icon {
   width: 35px;
@@ -110,4 +109,112 @@ label {
 }
 .dislike {
   background-color: red;
+}
+
+.spacing {
+  margin-right: 2.5%;
+}
+
+label {
+  font-weight: bold;
+  font-size: 0.8rem;
+}
+
+.full-box {
+  flex: 1 1 100%;
+  position: relative;
+}
+
+.tags {
+  color: blue;
+}
+
+.half-box {
+  flex: 1 1 45%;
+  position: relative;
+}
+
+.cardNot {
+  height: 550px;
+}
+
+input {
+  border-bottom: 2px solid #323232;
+  padding: 10px;
+  font-size: 0.9rem;
+  margin-bottom: 40px;
+}
+
+input:focus {
+  border-color: #e60084;
+}
+
+input[type="submit"] {
+  background-color: #200d75;
+  color: rgb(250, 248, 248);
+  border: none;
+  border-radius: 20px;
+  height: 40px;
+  cursor: pointer;
+}
+
+form {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+#agreement {
+  margin-right: 5px;
+}
+
+#agreement,
+#agreement-label {
+  display: inline-block;
+  width: auto;
+}
+
+.error-validation {
+  color: #ff1a1a;
+  position: absolute;
+  top: 57px;
+  font-size: 12px;
+}
+
+.template {
+  display: none;
+}
+/*css do login*/
+#login {
+  width: 500px;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: #fff;
+  border-radius: 10px;
+  padding: 25px;
+}
+#login h1 {
+  text-align: center;
+  margin-bottom: 25px;
+  font-size: 1.6rem;
+}
+
+#remember-me {
+  margin-right: 5px;
+}
+
+#remember-me,
+#remember-me-label {
+  display: inline-block;
+  width: auto;
+}
+
+input[type="enter"] {
+  background-color: #200d75;
+  color: rgb(250, 248, 248);
+  border: none;
+  border-radius: 20px;
+  height: 40px;
+  cursor: pointer;
+  text-align: center;
 }
