--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -158,6 +158,15 @@ input[type="submit"] {
   cursor: pointer;
 }
 
+#btn-submit{
+  background-color: #200d75;
+  color: rgb(250, 248, 248);
+  border: none;
+  padding: 10px;
+  border-radius: 20px;
+  height: 40px;
+}
+
 form {
   display: flex;
   flex-wrap: wrap;
