--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -70,8 +70,20 @@ label {
 }
 .dropdown-toggle {
   background-color: rgb(2, 6, 56);
-  margin-top: 20px;
-  margin-left: 1300px;
+}
+
+#dropdown-container{
+  width: 10%;
+  height: 20%;
+}
+
+#dropdown-container > button {
+  width: 50%;
+  margin-top: 4%;
+}
+
+.resultado{
+  width: 100%;
 }
 
 .resultado img {
@@ -94,6 +106,17 @@ label {
   border: 1px solid #9c9c9c;
   background-color: #eaeaea;
 }
+
+/*-----------Busca-----------*/
+
+/* Botoes like dislike */
+.like {
+  background-color: green;
+}
+.dislike {
+  background-color: red;
+}
+
 /* SVG Fav Icon */
 .fav-icon {
   width: 35px;
@@ -103,17 +126,7 @@ label {
 .fav-icon-true {
   fill: yellow !important;
 }
-/* Botoes like dislike */
-.like {
-  background-color: green;
-}
-.dislike {
-  background-color: red;
-}
 
-.spacing {
-  margin-right: 2.5%;
-}
 
 label {
   font-weight: bold;
